# openbatch

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  publish_documentation.yml  test.yml
docs/: getting_started.md  index.md  requirements.txt  validation.md
docs/reference/: batch_job_collector.md  batch_job_manager.md  model.md  requests.md
src/OpenAIBatch/: __init__.py  _utils.py  builder.py  collector.py  manager.py  model.py
src/openbatch/: __init__.py  _utils.py  collector.py  manager.py  model.py  validation.py
tests/: test_collector.py  test_integration.py  test_manager.py  test_model.py  test_utils.py  test_validation.py
