[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openbatch"
version = "0.0.4"
authors = [
    { name="Daniel Gomm", email="daniel.gomm@cwi.nl" },
]
description = "Create batch jobs for the OpenAI API with ease."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.11.9",
]

[project.urls]
Homepage = "https://github.com/daniel-gomm/openbatch"
Issues = "https://github.com/daniel-gomm/openbatch/issues"
Documentation = "https://daniel-gomm.github.io/openbatch/"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=openbatch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/openbatch"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "N805",   # first argument should be named self (pydantic validators)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802",   # function name should be lowercase
    "N803",   # argument name should be lowercase
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# Mypy configuration - Static type checking
# Configured for gradual adoption with reasonable strictness
[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Too strict for **kwargs patterns
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped defs (gradual adoption)
disallow_incomplete_defs = false  # Allow incomplete defs (gradual adoption)
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Pre-commit adds ignores, this would conflict
warn_no_return = true
strict_equality = true
# Allow flexible type checking for union types and **kwargs
disable_error_code = ["assignment", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true
